# genfut

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
example/: codegen.rs  main.rs  matmul.fut
examples/: Cargo.toml  codegen.rs  main.rs  user.c
examples/matmul/: Cargo.toml  build.rs
examples/matmul/lib/: a.c  a.h
examples/matmul/src/: arrays.rs  bindings.rs  context.rs  lib.rs  main.rs  traits.rs
src/: arrays.rs  entry.rs  genc.rs  lib.rs  main.rs
src/static/: build.rs  static_array.rs  static_array_types.rs  static_cargo.toml  static_context.rs  static_lib.rs  static_opaque_types.rs  static_traits.rs
