[package]
name = "genfut"
version = "0.2.1"
authors = ["Valdemar Erk <valdemar@erk.io>"]
edition = "2018"
license = "ISC"
description = "Generate bindings for Futhark"
homepage = "https://github.com/Erk-/genfut"
documentation = "https://docs.rs/genfut"
readme = "README.md"
repository = "https://github.com/Erk-/genfut"

[dependencies]
bindgen = "0.54.0"
cc = "1.0.45"
Inflector = "0.11.4"
regex = "1"
structopt = "0.3.2"

[features]
default = ["sequential_c"]
sequential_c = []
cuda = []
opencl = []
no_futhark = []
