[package]
name = "genfut"
version = "0.4.3"
authors = ["Valdemar Erk <valdemar@erk.io>"]
edition = "2018"
license = "ISC"
description = "Generate bindings for Futhark"
homepage = "https://github.com/Erk-/genfut"
documentation = "https://docs.rs/genfut"
readme = "README.md"
repository = "https://github.com/Erk-/genfut"

[dependencies]
bindgen = "0.63.0"
cc = "1.0.78"
Inflector = "0.11.4"
regex = "1.7.1"
clap = { version = "4.1.4", features = ["derive"] }

[features]
default = []
