[package]
name = "matmul"
description = "Futhark matrix multiplication example"
version = "0.1.0"
authors = ["Name <name@example.com>"]
edition = "2018"
license = "YOLO"

[dependencies]

[build-dependencies]
bindgen = "0.51.0"
cc = "1.0"

[features]
default = ["sequential_c"]
sequential_c = []
cuda = []
opencl = []
